--- a/src/app/admin/navbar/navbar.component.html
+++ b/src/app/admin/navbar/navbar.component.html
@@ -12,7 +12,7 @@
       </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
-          <li *ngIf="!isLogged" class="active"><a href="#">Accueil</a></li>
+          <li *ngIf="!isLogged" class="active"><a routerLink="/admin/home">Accueil</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
             <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-bell"></span><span class="badge">3</span></a>
