--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -17,9 +17,9 @@
                                 <b>Date release :</b> {{game.dateRelease | date}}
                             </div>
                             <button type="button" (click)="dynamicModal(game.id, game.title)" class="btn btn-success"
-                            data-toggle="modal" data-target="#modalDescription">Success</button>
-                            <button type="button" class="btn btn-success" 
-                            data-toggle="modal" data-target="#modalDescription">Success</button>
+                            data-toggle="modal" data-target="#modalDescription">Ajouter</button>
+                            <button type="button" class="btn btn-danger" 
+                            data-toggle="modal" data-target="#modalDescription">Retirer</button>
                         </div>
                     </div>
                     <hr class="style-two" />
